testsuite/poke.pkl/integers-diag-3.pk
/* { dg-do compile } */

var a =
  0o; /* { dg-error "" } */
